[+] index.html: RWD para la imagen del buscador [+] main.css: Centramos titulo e index, quitamos bordes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <main class="main">
         <div class="main-banner">
             <div class="banner-image">
-                <img src="./images/main-banner.png" alt="Foto: Salón Principal Restaurant Finder">
+                <!-- <img src="./images/main-banner.png" alt="Foto: Salón Principal Restaurant Finder"> -->
+                <picture>
+                    <source media="(min-width: 567px)" srcset="./images/main-banner.png" />
+                    <img src="./images/main-banner-mobile.png" alt="Foto: Salón Principal Restaurant Finder" />
+                </picture>
             </div>
             <div class="banner-search">
                 <h1>Stop looking for a restaurant  - find it.</h1>
