[+] index: Card Producto [+] main.css: RWD Card producto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Finder</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -23,7 +24,7 @@
                 </picture>
             </div>
             <div class="banner-search">
-                <h1>Stop looking for a restaurant  - find it.</h1>
+                <h1>Stop looking for a restaurant - find it.</h1>
                 <input class="input-search" type="text" placeholder="Search for Restaurants by Name, Cuisine, Location">
             </div>
         </div>
@@ -34,7 +35,26 @@
                     Filtro horizontal
                 </div>
                 <div class="main-content">
-                    Todos los productos
+                    <div class="products">
+                        <div class="card">
+                            <div class="card__image">
+                                <img class="product-image" src="./images/product-1.png" alt="">
+                            </div>
+                            <div class="card__info">
+                                <div class="card__name">Anchor & James</div>
+                                <div class="card__location">American | Downtown Union Street</div>
+                                <div class="card__price">$30 and under</div>
+                                <div class="card__score">
+                                  
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star-half-stroke"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
