--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card">
+                            <div class="card__image">
+                                <img class="product-image" src="./images/product-1.png" alt="">
+                            </div>
+                            <div class="card__info">
+                                <div class="card__name">Anchor & James</div>
+                                <div class="card__location">American | Downtown Union Street</div>
+                                <div class="card__price">$30 and under</div>
+                                <div class="card__score">
+                                  
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star-half-stroke"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card__image">
+                                <img class="product-image" src="./images/product-1.png" alt="">
+                            </div>
+                            <div class="card__info">
+                                <div class="card__name">Anchor & James</div>
+                                <div class="card__location">American | Downtown Union Street</div>
+                                <div class="card__price">$30 and under</div>
+                                <div class="card__score">
+                                  
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star-half-stroke"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
